# ray-tracing

./: .gitignore  Cargo.toml  scene.json
src/: main.rs
src/camera/: mod.rs  screen.rs
src/hit/: broadphase_shape.rs  bvh_broadphase.rs  mod.rs  noop_broadphase.rs  ray.rs
src/material/: dielectric.rs  diffuse.rs  light.rs  metal.rs  mod.rs  wood.rs
src/shape/: mod.rs  sphere.rs  triangle.rs
src/tracer/: mod.rs
src/utils/: color.rs  cornell_box.rs  mod.rs  scene_info.rs  vec.rs
